docs: move documentation to WikiJS, reduce CLAUDE.md to pointers
Full backend/frontend/business-rules docs now live on the wiki
(secular/profissao/projetos/judas/{backend,frontend,regras-negocio}).
docs/ removed; module CLAUDE.md files trimmed to short pointers so
local context stays current with a single source of truth.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>